deploy/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slowtok-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slowtok-api
  template:
    metadata:
      labels:
        app: slowtok-api
    spec:
      containers:
        - name: slowtok-api
          image: 'appademin/slowtok-api:0.0.4'
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              name: web
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: slowtok-api-service
spec:
  selector:
    app: slowtok-api
  ports:
    - protocol: TCP
      port: 4000
