deploy/api-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: slowtok-api
  namespace: appademin
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: api.slowtok.com
  to:
    kind: Service
    name: slowtok-api-service
    weight: 100
  port:
    targetPort: 4000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
