deploy/web-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: slowtok-web
  namespace: appademin
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: slowtok.com
  to:
    kind: Service
    name: slowtok-web-service
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
